@@ -31,6 +31,8 @@ DIST genpatches-3.4-3.base.tar.bz2 54926 SHA256 408a51b8ae19f679f359bf2954c3552f
 DIST genpatches-3.4-3.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
 DIST genpatches-3.4-4.base.tar.bz2 68493 SHA256 df8fb89fe764c4bcb0be658a5e87369aa4f236c7779146a3eaeb2ee8cf044300 SHA512 5f74075a82471d31490aa1a27aff2487cee1a200114624ed89bd15e2061e804419f302b74a85f1924fced1c3a43ecebd266dd26342940d37273e2b2a8e89e544 WHIRLPOOL ea0f4a32b95e797f16314764c79fceb8bf1c60c36052b9d6d82024478f196dc83a3a886de828f83e54fcb5abcb533ea74e32d14b1eba320e03b1c28cdb7c2f98
 DIST genpatches-3.4-4.extras.tar.bz2 17508 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96 SHA512 f84be04008f254509de7eb05c78fe040fa563038e8ba2744412296a54208c7889417f72ada0db8b21754e2db544fb921b75300728d48337bdc7a7dfa02cdcf26 WHIRLPOOL b0331d32d4ef74fd2357dfc2dc046562828f9bbbbd175412276d79d4097a11a6c91847ba364d8e84ffee361bfd868161951ae740ee232504d1ae4fbb9d87f74e
+DIST genpatches-3.4-5.base.tar.bz2 83423 SHA256 4ee8ef2834f0993536188ad2de8f6d3eddac963cc935c1d77eac4f98b99199eb SHA512 2ba00adf1235aa78d567abd73ed8cc269187141d4fcce8a65d72484229473ad01e3f9c69f8cd9e0c1c852108f5ea340c89946d5b83a00c133611718b45ff5144 WHIRLPOOL 01af51046dd8d6f240ccde7076d3bf08677545c1c2a9a47e2a5a59efb362f0e051fd3e8887e71fe282ec455cd63a32814722d57a962ffdcfaa26a5e6885683d3
+DIST genpatches-3.4-5.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
 DIST linux-3.0.tar.bz2 76753134 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0 SHA512 4a87bba5f62945d226d8c0059d38e6354ad8cd379b8d7936f934a3868a69c6a4c724aad56d974966e8ef1de45f1e0bbe628cb15fc568b6f8cfc63dbc8104bc9d WHIRLPOOL 4bf0a38a623797be81eadaa4b102f9ea1da31edab9aa9e886577bfda79ffd6e105fff702438c2e1350cbb005f9e7594be8e07fe76ad36b1c28ef94184b6edf9f
 DIST linux-3.1.tar.bz2 77190238 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359 SHA512 131b814325d888bb11ba552bc5bdd91ee2d8e139b06ac7ba94e716bcbbcc99ba30867eeea4aab580907916203bc526ae0bccda688151b250ba7943e193e50252 WHIRLPOOL d224dd52c7133e9768817319d0ad0d3797d426180b4d3d936d5189b500521ac4abe4abae7cc71f055d7e5194171f549b6fdb0221ae023cb35b16993741ad1e61
 DIST linux-3.2.tar.bz2 78147838 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463 SHA512 1f57b98e8da34b10f37ce94e0f13a994c111d483b104c27a8f58a4a55013a73a9f1ffcebb597be63ce0dfadb92201e93b0e072ba49bac0033026aceb0840c812 WHIRLPOOL 3dc893bde09f064e4614183964a4b9feaab938ca7a739f46f825818a577884eae815f195b52a4c55c571345de59d7ba09631fb68dac481a0837b24868ce60e3d
@@ -44,13 +46,14 @@ EBUILD lh-sources-3.4.0.ebuild 927 SHA256 d113e4e7ded2c3e886a1d965cf3f1067aac0ec
 EBUILD lh-sources-3.4.2-r1.ebuild 927 SHA256 61248830d30060260c78b933df128fed2ab6dceb88edd49cfcddf01078eec074 SHA512 355144562aa3d3317ffbf7a190b7fcb3ef0255a2ab7bc037c34c4368df31a25cbb7111ffd347e195748f4ab79bbaff4d0e2bab729979db27793ee411c4577440 WHIRLPOOL f7b115d1dd6631262c153b9ce452a62254d66133b41a7facebf731f0fecce955ed2bd36adef7c6735a6ec8f9301310b881ef366c488cba02fddf2f487a20b502
 EBUILD lh-sources-3.4.2.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
 EBUILD lh-sources-3.4.3.ebuild 927 SHA256 a70e9d03bdce7dcd52bb47bc811af1b0e424a7e057a723294f01e7471ba0225f SHA512 e3c09409adca8462b574b28005c4852b443eb03bdd21630277316672e853ba8b94234c6cf8a01bb458be86c06c75d36e006ec0aaadda3c19c284e5d45d15a6d7 WHIRLPOOL c4bda91c779c253e860aed474c7b832b21b43e71c3bbeb17057c0ecec4363c86774e4e7561a62b05b06563a9f575302d9b4c54fbbbb603bc54949f6661cd78c5
-MISC ChangeLog 10474 SHA256 cdbee6f849fb7c27ceff5b1e17de3dfae47c7ddaaaea779a2ab64bc0250a87ef SHA512 ea2c1b2203c8ab1bd149d5b65dbf8bf738d46cc7548bd32c48831642a4b73e81024a516230175c20bc9e5c8cdbb64753587213f58e2db5d6425ffda7cb0cc357 WHIRLPOOL 6ad0034faeed84b73ba2aadbe4e1371f77459b8ef156916d4830abba635c252e3ac17a75393b56a86f2a850d6dcc18012c8c15fe782b8c4c4a6e6040346465fc
+EBUILD lh-sources-3.4.4.ebuild 927 SHA256 92b1d460500ae0be85ba7c2f31e8d454729bf08360d4c16993c72975afcdfa38 SHA512 3dade4040c06fdaa073d3958bdc64de3f56a0c9d7b636906c43aae4213f68198660e6ede15ba6233b7db61b500096bd6b0eafc020c4557043cfaaddccb2e0499 WHIRLPOOL cbadf519deefc9e7b232882b8a2d8f996104fabd0dbfed1d8b4f9e978b2e1f27dc43fd1c2a8244cbd91285a9ee1ee978b8228c2f265e843a293aee86d70d2da4
+MISC ChangeLog 10596 SHA256 a580bad45522893d3432df3f66d5445ad1315a1a679c53b512acae0a78d11341 SHA512 fa02b345e5896adb8fa23476c414cdde8bc8b6988252248ad5e2ac246bf19d4e0ea0dbddb29cef2eed77f1b31054a87d126471df957593d92ba0fba0b76a8971 WHIRLPOOL d81683ba008114dc0eec756f7ca41ba8f2edd93436c3933a44c060be529b902562dd2a8a7441acc9633dfb3921e6aae0526b74565b78586ee6d529a15c6517d7
 MISC metadata.xml 322 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc SHA512 001fce1594b001c9864d86024c45a1560b651e7dda5d81ad8190ea62c88ad48d79867a66cceb2e108e35d6c7d386799d5a3a9d705c8c3beb0c26cdb9b3b94007 WHIRLPOOL 8b233ac46194ab42d98d89be79df6b7f21843923bb9502336a8504a2e5c4de5f3d908de11baf2cf48adf04ab1b16b034707a3d4a1d8746c29bbc9574cd7248cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/gxO0ACgkQgAnW8HDreRYATACfQsazmBww5oygZJyDJ8y1MPns
-+dgAoLwEymQVsJqHrAIlkR3+aRfOPqu5
-=A4Xg
+iEYEAREKAAYFAk/mwXcACgkQgAnW8HDreRYwmQCgzRpGA3z8jK0VZx9Vg3omiVID
+x/cAmwWFz/MVvJe0RZbhr6EM2vorkYoP
+=u7QO
 -----END PGP SIGNATURE-----
