@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lh-sources-3.4.4 (24 Jun 2012)
+
+  24 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.4.ebuild:
+  Version BUmp
+
 *lh-sources-3.4.3 (19 Jun 2012)
 
   19 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.3.ebuild:
